--- a/DC.html
+++ b/DC.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">                                        <!-- https://getbootstrap.com/ -->
   <link rel="stylesheet" href="css/templatemo-style.css">                                     <!-- Templatemo style -->
 
+  
+
   <script>
     var renderPage = true;
 
@@ -26,92 +28,100 @@
 </head>
 
 <body>
-  <!-- Loader -->
-  <div id="loader-wrapper">
-    <div class="loader-section section-left"></div>
-    <div class="loader-section section-right"></div>
-  </div>
+    <!--音樂拉霸
+    <audio autoplay = "autoplay" controls = "controls" loop = "loop" preload = "auto"
+    src = "./music/Bonfire.mp3">
+    你的瀏覽器不支援audio標籤
+    </audio >
+        -->
 
- <div class="container">
-         <!-- 4th Section -->
-         <section class="row tm-section tm-mb-30">
-             <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8">
-                 <div class="tm-flex-center pl-5 pr-5 pt-5 pb-5">
-                     <div class="tm-md-flex-center">
-                         <h2 class="mb-4 tm-text-color-primary"><strong>DC｜名偵探柯南</strong></h2>
-                         <br />
-                         <h5 class="mb-4 tm-text-color-primary">▍ AKAM 赤安</h5>
-                         <p><a href="http://bit.ly/39R1KqC">【短文】初雪（CWT56無料公開）</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.12.12</font></p>
-                         <p><a href="https://bit.ly/3ldV89f">【極短】七夕</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.8.25</font></p>
-                         <p><a href="https://bit.ly/2ZFURDV">【短文】床邊的康乃馨（R18）</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.5.27</font></p>
-                         <p><a href="./article/dc/akam012-r18.html">【短文】情人節賀文2020（R18）</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.2.14</font></p>
-                         <p><a href="./article/collection2019.html">【整理】2019噗浪隨筆整理</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.12.28</font></p>
-                         <p><a href="./article/dc/akam011.html">【短文】CWT53無料公開</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.12.13</font></p>
-                         <p><a href="./article/dc/akam010.html">【極短】依然相伴</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.10.17</font></p>
-                         <p><a href="./article/dc/akam009.html">【極短】上邪</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.9.2</font></p>
-                         <p><a href="./article/dc/akam008.html">【短文】Teddy Bear</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.5.13</font></p>
-                         <p><a href="./article/dc/akam007.html">【系列】身為優秀的下屬</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.1.18&nbsp;&nbsp;NEW!!</font></p>
-                         <p><a href="./article/dc/akam006.html">【極短】春日</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.4.3</font></p>
-                         <p><a href="./article/dc/akam005.html">【短文】身為共同友人：情人節快樂</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.3.14</font></p>
-                         <p><a href="./article/dc/akam004.html">【短文】英雄之後：M22後記</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.2.28</font></p>
-                         <p><a href="./article/dc/akam003.html">【短文】特工遊樂園記：情人節快樂</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.2.14</font></p>
-                         <p><a href="./article/dc/akam002.html">【極短】新年快樂</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2018.12.31</font></p>
-                         <p><a href="./article/dc/akam001.html">【極短】男朋友</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2018.11.11</font></p>
+    <!-- Loader -->
+    <div id="loader-wrapper">
+        <div class="loader-section section-left"></div>
+        <div class="loader-section section-right"></div>
+    </div>
 
-                         <br />
-                         <h5 class="mb-4 tm-text-color-primary">▍ Furuya 降谷中心</h5>
-                         <p><a href="./article/dc/furuya001.html">【短詩】原色</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.3.22</font></p>
+    <div class="container">
+        <!-- 4th Section -->
+        <section class="row tm-section tm-mb-30">
+            <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8">
+                <div class="tm-flex-center pl-5 pr-5 pt-5 pb-5">
+                    <div class="tm-md-flex-center">
+                        <h2 class="mb-4 tm-text-color-primary"><strong>DC｜名偵探柯南</strong></h2>
+                        <br />
+                        <h5 class="mb-4 tm-text-color-primary">▍ AKAM 赤安</h5>
+                        <p><a href="https://bit.ly/3t8BYaU">【短文】白色情人節賀文2022</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2022.3.14</font></p>
+                        <p><a href="http://bit.ly/39R1KqC">【短文】初雪（CWT56無料公開）</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.12.12</font></p>
+                        <p><a href="https://bit.ly/3ldV89f">【極短】七夕</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.8.25</font></p>
+                        <p><a href="https://bit.ly/2ZFURDV">【短文】床邊的康乃馨（R18）</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.5.27</font></p>
+                        <p><a href="./article/dc/akam012-r18.html">【短文】情人節賀文2020（R18）</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.2.14</font></p>
+                        <p><a href="./article/collection2019.html">【整理】2019噗浪隨筆整理</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.12.28</font></p>
+                        <p><a href="./article/dc/akam011.html">【短文】CWT53無料公開</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.12.13</font></p>
+                        <p><a href="./article/dc/akam010.html">【極短】依然相伴</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.10.17</font></p>
+                        <p><a href="./article/dc/akam009.html">【極短】上邪</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.9.2</font></p>
+                        <p><a href="./article/dc/akam008.html">【短文】Teddy Bear</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.5.13</font></p>
+                        <p><a href="./article/dc/akam007.html">【系列】身為優秀的下屬</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.1.18&nbsp;&nbsp;NEW!!</font></p>
+                        <p><a href="./article/dc/akam006.html">【極短】春日</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.4.3</font></p>
+                        <p><a href="./article/dc/akam005.html">【短文】身為共同友人：情人節快樂</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.3.14</font></p>
+                        <p><a href="./article/dc/akam004.html">【短文】英雄之後：M22後記</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.2.28</font></p>
+                        <p><a href="./article/dc/akam003.html">【短文】特工遊樂園記：情人節快樂</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.2.14</font></p>
+                        <p><a href="./article/dc/akam002.html">【極短】新年快樂</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2018.12.31</font></p>
+                        <p><a href="./article/dc/akam001.html">【極短】男朋友</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2018.11.11</font></p>
 
-                         <br />
-                         <h5 class="mb-4 tm-text-color-primary">▍ Amuro 安室夢女</h5>
-                         <p><a href="./article/dc/amuro001.html">【短文】冰奶茶。三明治。吉他。</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.5.7</font></p>
+                        <br />
+                        <h5 class="mb-4 tm-text-color-primary">▍ Furuya 降谷中心</h5>
+                        <p><a href="./article/dc/furuya001.html">【短詩】原色</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.3.22</font></p>
+
+                        <br />
+                        <h5 class="mb-4 tm-text-color-primary">▍ Amuro 安室夢女</h5>
+                        <p><a href="./article/dc/amuro001.html">【短文】冰奶茶。三明治。吉他。</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.5.7</font></p>
 
 
-                         <!-- 新增目錄備用
+                        <!-- 新增目錄備用
                              <p><a href="#">【赤安極短】依然相伴</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.10.17</font></p>
     -->
-                         <br /><br />
-                         <a href="./index.html" class="btn btn-primary tm-md-align-center">Back to Home</a>
-                         <p>&nbsp;</p>
-                     </div>
-                 </div>
-             </div>
-             <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 text-xl-right text-md-center text-center mt-5 mt-lg-0 pr-lg-0">
-                 <img src="img/dc-con.jpg" alt="Image" class="img-fluid">
-             </div>
-         </section>
+                        <br /><br />
+                        <a href="./index.html" class="btn btn-primary tm-md-align-center">Back to Home</a>
+                        <p>&nbsp;</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 text-xl-right text-md-center text-center mt-5 mt-lg-0 pr-lg-0">
+                <img src="img/dc-con.jpg" alt="Image" class="img-fluid">
+            </div>
+        </section>
 
-             
 
-         <!-- 6th Section -->
-         <section class="row">
-             <div class="col-lg-12 tm-bg-color-gray tm-text-color-white tm-font-thin tm-form-footer">
-             </div>
-         </section>
 
-         <!-- Footer -->
-         <div class="row">
-             <div class="col-lg-12">
-                 <p class="text-center small tm-copyright-text mb-0">Last edit 2021/2/6 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
-             </div>
-         </div>
-</div>
-<!-- load JS -->
-<script src="js/jquery-3.2.1.slim.min.js"></script>         <!-- https://jquery.com/ -->
-<script>
+        <!-- 6th Section -->
+        <section class="row">
+            <div class="col-lg-12 tm-bg-color-gray tm-text-color-white tm-font-thin tm-form-footer">
+            </div>
+        </section>
 
-  /* DOM is ready
-  ------------------------------------------------*/
-  $(function(){
+        <!-- Footer -->
+        <div class="row">
+            <div class="col-lg-12">
+                <p class="text-center small tm-copyright-text mb-0">Last edit 2022/3/14 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+            </div>
+        </div>
+    </div>
+    <!-- load JS -->
+    <script src="js/jquery-3.2.1.slim.min.js"></script>         <!-- https://jquery.com/ -->
+    <script>
 
-    if(renderPage) {
-      $('body').addClass('loaded');
-    }
+        /* DOM is ready
+        ------------------------------------------------*/
+        $(function () {
 
-    $('.tm-current-year').text(new Date().getFullYear());  // Update year in copyright
-  });
+            if (renderPage) {
+                $('body').addClass('loaded');
+            }
 
-</script>
+            $('.tm-current-year').text(new Date().getFullYear());  // Update year in copyright
+        });
+
+    </script>
 
 </body>
 </html>
