--- a/APEX.html
+++ b/APEX.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>待墨濃時 - APEX Legends</title>
-  <link rel="icon" href="./img/icon.ico" type="image/x-icon">
-  <!-- load CSS -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">    <!-- Google web font "Open Sans" -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">                                        <!-- https://getbootstrap.com/ -->
-  <link rel="stylesheet" href="css/templatemo-style.css">                                     <!-- Templatemo style -->
+    <title>待墨濃時 - APEX Legends</title>
+    <link rel="icon" href="./img/icon.ico" type="image/x-icon">
+    <!-- load CSS -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">    <!-- Google web font "Open Sans" -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">                                        <!-- https://getbootstrap.com/ -->
+    <link rel="stylesheet" href="css/templatemo-style.css">                                     <!-- Templatemo style -->
+    <link href="./album/bootstrap.min.css" rel="stylesheet">
+    <link href="./album/flexslider.css" rel="stylesheet">
+    <link href="./album/prettyPhoto.css" rel="stylesheet">
+    <link href="./album/style.css" rel="stylesheet">
+    <script src="./album/all.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="./album/common.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="./album/util.js"></script>
 
-  <script>
-    var renderPage = true;
+    <script>
+        var renderPage = true;
 
-    if(navigator.userAgent.indexOf('MSIE')!==-1
-      || navigator.appVersion.indexOf('Trident/') > 0){
-        /* Microsoft Internet Explorer detected in. */
-        alert("Please view this in a modern browser such as Chrome or Microsoft Edge.");
-        renderPage = false;
-    }
-  </script>
+        if (navigator.userAgent.indexOf('MSIE') !== -1
+            || navigator.appVersion.indexOf('Trident/') > 0) {
+            /* Microsoft Internet Explorer detected in. */
+            alert("Please view this in a modern browser such as Chrome or Microsoft Edge.");
+            renderPage = false;
+        }
+    </script>
 
 </head>
 
@@ -31,50 +38,79 @@
     <div class="loader-section section-right"></div>
   </div>
 
- <div class="container">
-         <!-- 4th Section -->
-         <section class="row tm-section tm-mb-30">
-             <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8">
-                 <div class="tm-flex-center pl-5 pr-5 pt-5 pb-5">
-                     <div class="tm-md-flex-center">
-                         <h2 class="mb-4 tm-text-color-primary"><strong>APEX Legends｜APEX英雄</strong></h2>
-                         <br />
-                         <h5 class="mb-4 tm-text-color-primary">▍ Darksparks 惡靈華森</h5>
-                         <p><a href="https://bit.ly/2XN0Ck7">【短篇】向海裡去</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2021.9.26</font></p>
-                         <p><a href="http://bit.ly/3qOvn1a">【書信】Dear Renee</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.12.12</font></p>
-                         <p><a href="https://bit.ly/336pX8n">【短篇】… the best is yet to be.</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.11.21</font></p>
-                         <p><a href="./article/apex/darksparks002.html">【短篇】Gun Charm with You</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.7.26</font></p>
-                         <p><a href="./article/apex/darksparks001.html">【極短】Come Back to Me</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.6.11</font></p>
+  <div class="container">
+      <!-- 4th Section -->
+      <section class="row tm-section tm-mb-30">
+          <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8">
+              <div class="tm-flex-center pl-5 pr-5 pt-5 pb-5">
+                  <div class="tm-md-flex-center">
+                      <h2 class="mb-4 tm-text-color-primary"><strong>APEX Legends｜APEX英雄</strong></h2>
+                      <br />
+                      <h5 class="mb-4 tm-text-color-primary">▍ Darksparks 惡靈華森</h5>
+                      <p><a href="https://bit.ly/2XN0Ck7">【短篇】向海裡去</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2021.9.26</font></p>
+                      <p><a href="http://bit.ly/3qOvn1a">【書信】Dear Renee</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.12.12</font></p>
+                      <p><a href="https://bit.ly/336pX8n">【短篇】… the best is yet to be.</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.11.21</font></p>
+                      <p><a href="./article/apex/darksparks002.html">【短篇】Gun Charm with You</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.7.26</font></p>
+                      <p><a href="./article/apex/darksparks001.html">【極短】Come Back to Me</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.6.11</font></p>
 
-                         <!-- 新增目錄備用
-                             <p><a href="#">【赤安極短】依然相伴</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.10.17</font></p>
-    -->
-                         <br /><br />
-                         <a href="./index.html" class="btn btn-primary tm-md-align-center">Back to Home</a>
-                         <p>&nbsp;</p>
-                     </div>
-                 </div>
-             </div>
-             <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 text-xl-right text-md-center text-center mt-5 mt-lg-0 pr-lg-0">
-                 <img src="img/apex-con.jpg" alt="Image" class="img-fluid">
-             </div>
-         </section>
+                      <!-- 新增目錄備用
+                                             <p><a href="#">【赤安極短】依然相伴</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.10.17</font></p>
+                    -->
+                      <br /><br />
+                      <a href="./index.html" class="btn btn-primary tm-md-align-center">Back to Home</a>
+                      <p>&nbsp;</p>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 text-xl-right text-md-center text-center mt-5 mt-lg-0 pr-lg-0">
+              <img src="img/apex-con.jpg" alt="Image" class="img-fluid">
+          </div>
+      </section>
 
-             
 
-         <!-- 6th Section -->
-         <section class="row">
-             <div class="col-lg-12 tm-bg-color-gray tm-text-color-white tm-font-thin tm-form-footer">
-             </div>
-         </section>
+      <!--相簿部分-->
+      <section id="workArea" class="text-center">
+          <div class="container">
+              <div class="row">
+                  <div>
+                      <h5 class="mb-4 tm-text-color-primary">&emsp;&emsp;▍ Image</h5>
+                  </div>
+              </div>
+              <ul id="Grid" class="row">
+                  <li class="mix webdesign col-sm-4 mix_all" style="display: block;  opacity: 1;">
+                      <a href="./img/APEX/img001.jpg" data-rel="prettyPhoto"><img alt="相片說明" src="./img/APEX/img001.jpg" class="img-responsive"><span>2021.10.31 萬聖小水怪</span></a>
+                  </li>
+                  <li class="mix printing col-sm-4 mix_all" style="display: block;  opacity: 1;">
+                      <a href="./img/APEX/img005.jpg" data-rel="prettyPhoto"><img alt="相片說明" src="./img/APEX/img005.jpg" class="img-responsive"><span>2021.1.7 The thin line</span></a>
+                  </li>
+                  <li class="mix development col-sm-4 mix_all" style="display: block;  opacity: 1;">
+                      <a href="./img/APEX/img003.jpg" data-rel="prettyPhoto"><img alt="相片說明" src="./img/APEX/img003.jpg" class="img-responsive"><span>2021.1.1 Sunrise</span></a>
+                  </li>
+                  <li class="mix webdesign col-sm-4 mix_all" style="display: block;  opacity: 1;">
+                      <a href="./img/APEX/img004.jpg" data-rel="prettyPhoto"><img alt="相片說明" src="./img/APEX/img004.jpg" class="img-responsive"><span>2020.12.28 Heirlooms</span></a>
+                  </li>
+                  <li class="mix printing col-sm-4 mix_all" style="display: block;  opacity: 1;">
+                      <a href="./img/APEX/img002.jpg" data-rel="prettyPhoto"><img id="doubleWidth" alt="相片說明" src="./img/APEX/img002.jpg" class="img-responsive"><span>2021.9.26 向海裡去</span></a>
+                  </li>
+              </ul>
+          </div>
+      </section>
+      <!--相簿部分-->
 
-         <!-- Footer -->
-         <div class="row">
-             <div class="col-lg-12">
-                 <p class="text-center small tm-copyright-text mb-0">Last edit 2021/9/26 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
-             </div>
-         </div>
-</div>
+
+      <!-- 6th Section -->
+      <section class="row">
+          <div class="col-lg-12 tm-bg-color-gray tm-text-color-white tm-font-thin tm-form-footer">
+          </div>
+      </section>
+
+      <!-- Footer -->
+      <div class="row">
+          <div class="col-lg-12">
+              <p class="text-center small tm-copyright-text mb-0">Last edit 2022/6/26 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+          </div>
+      </div>
+  </div>
 <!-- load JS -->
 <script src="js/jquery-3.2.1.slim.min.js"></script>         <!-- https://jquery.com/ -->
 <script>
