--- a/DC.html
+++ b/DC.html
@@ -40,7 +40,6 @@
     你的瀏覽器不支援audio標籤
     </audio >
         -->
-
     <!-- Loader -->
     <div id="loader-wrapper">
         <div class="loader-section section-left"></div>
@@ -84,8 +83,9 @@
 
 
                         <!-- 新增目錄備用
-                                             <p><a href="#">【赤安極短】依然相伴</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.10.17</font></p>
-                    -->
+                                                 <p><a href="#">【赤安極短】依然相伴</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.10.17</font></p>
+                        -->
+
                         <br /><br />
                         <a href="./index.html" class="btn btn-primary tm-md-align-center">Back to Home</a>
                         <p>&nbsp;</p>
@@ -101,7 +101,7 @@
         <section id="workArea" class="text-center">
             <div class="container">
                 <div class="row">
-                    <div >
+                    <div>
                         <h5 class="mb-4 tm-text-color-primary">&emsp;&emsp;▍ Image</h5>
                     </div>
                 </div>
@@ -137,8 +137,6 @@
             </div>
         </section>
         <!--相簿部分-->
-
-
         <!-- 6th Section -->
         <section class="row">
             <div class="col-lg-12 tm-bg-color-gray tm-text-color-white tm-font-thin tm-form-footer">
@@ -148,7 +146,7 @@
         <!-- Footer -->
         <div class="row">
             <div class="col-lg-12">
-                <p class="text-center small tm-copyright-text mb-0">Last edit 2022/6/26 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+                <p class="text-center small tm-copyright-text mb-0">Last edit 2022/6/27 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
             </div>
         </div>
     </div>
@@ -168,6 +166,17 @@
         });
 
     </script>
+
+    <script src="./album/jquery-1.10.2.min.js"></script>
+    <script src="./album/bootstrap.min.js"></script>
+    <script src="./album/js"></script>
+    <script src="./album/jquery.ui.map.min.js"></script>
+    <script src="./album/jquery.mixitup.min.js"></script>
+    <script src="./album/jquery.prettyPhoto.js"></script>
+    <script src="./album/jquery.parallax-1.1.3.js"></script>
+    <script src="./album/jquery.flexslider-min.js"></script>
+    <script src="./album/scrolld.min.js"></script>
+    <script src="./album/scripts.js"></script>
 
 </body>
 </html>
