--- a/APEX.html
+++ b/APEX.html
@@ -107,7 +107,7 @@
       <!-- Footer -->
       <div class="row">
           <div class="col-lg-12">
-              <p class="text-center small tm-copyright-text mb-0">Last edit 2022/6/26 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+              <p class="text-center small tm-copyright-text mb-0">Last edit 2022/6/27 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
           </div>
       </div>
   </div>
@@ -127,6 +127,16 @@
   });
 
 </script>
+<script src="./album/jquery-1.10.2.min.js"></script>
+<script src="./album/bootstrap.min.js"></script>
+<script src="./album/js"></script>
+<script src="./album/jquery.ui.map.min.js"></script>
+<script src="./album/jquery.mixitup.min.js"></script>
+<script src="./album/jquery.prettyPhoto.js"></script>
+<script src="./album/jquery.parallax-1.1.3.js"></script>
+<script src="./album/jquery.flexslider-min.js"></script>
+<script src="./album/scrolld.min.js"></script>
+<script src="./album/scripts.js"></script>
 
 </body>
 </html>
