--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
                       </div>
                       <div class="tm-pricing-body">
                           <ul class="tm-feature-list">
-                              <li><strong>Plurk｜</strong><a href="https://www.plurk.com/star_fall22">@star_fall22</a></li>
-                              <li><strong>Pixnet｜</strong><a href="http://star22fall22.pixnet.net/blog/post/233633627-%E6%96%87%E7%AB%A0%E7%9B%AE%E9%8C%84">墨未濃（舊站）</a></li>
-                              <li><strong>Doujin｜</strong><a href="https://www.doujin.com.tw/authors/info/star_fall22">墨兒</a></li>
-                              <li><strong>Email｜</strong><a href="mailto:star22fall22@gmail.com?subject=寫信給墨兒&body=墨兒墨兒，我想對你說......">star22fall22@gmail.com</a></li>
+                              <li><strong>噗浪｜</strong><a href="https://www.plurk.com/star_fall22">@star_fall22</a></li>
+                              <li><strong>痞客邦｜</strong><a href="http://star22fall22.pixnet.net/blog/post/233633627-%E6%96%87%E7%AB%A0%E7%9B%AE%E9%8C%84">墨未濃（舊站）</a></li>
+                              <li><strong>臺灣同人誌中心｜</strong><a href="https://www.doujin.com.tw/authors/info/star_fall22">墨兒</a></li>
+                              <li><strong>電子信箱｜</strong><a href="mailto:star22fall22@gmail.com?subject=寫信給墨兒&body=墨兒墨兒，我想對你說......">star22fall22@gmail.com</a></li>
                               <li>&nbsp;</li>
                               <li>&nbsp;</li>
                           </ul>
@@ -148,7 +148,7 @@
       <!-- Footer -->
       <div class="row">
           <div class="col-lg-12">
-              <p class="text-center small tm-copyright-text mb-0">Last edit 2021/10/4 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+              <p class="text-center small tm-copyright-text mb-0">Last edit 2022/6/29 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
           </div>
       </div>
   </div>
