--- a/APEX.html
+++ b/APEX.html
@@ -81,19 +81,19 @@
               -->
               <ul id="Grid" class="row">
                   <li class="mix webdesign col-sm-4 mix_all" style="display: block;  opacity: 1;">
-                      <a href="./img/APEX/img001.jpg" data-rel="prettyPhoto"><img alt="相片說明" src="./img/APEX/img001.jpg" class="img-responsive"><span>2021.10.31 萬聖小水怪</span></a>
+                      <a href="./img/APEX/img001.jpg" data-rel="prettyPhoto"><img src="./img/APEX/img001.jpg" class="img-responsive"><span>2021.10.31 萬聖小水怪</span></a>
                   </li>
                   <li class="mix printing col-sm-4 mix_all" style="display: block;  opacity: 1;">
-                      <a href="./img/APEX/img005.jpg" data-rel="prettyPhoto"><img alt="相片說明" src="./img/APEX/img005.jpg" class="img-responsive"><span>2021.1.7 The thin line</span></a>
+                      <a href="./img/APEX/img005.jpg" data-rel="prettyPhoto"><img src="./img/APEX/img005.jpg" class="img-responsive"><span>2021.1.7 The thin line</span></a>
                   </li>
                   <li class="mix development col-sm-4 mix_all" style="display: block;  opacity: 1;">
-                      <a href="./img/APEX/img003.jpg" data-rel="prettyPhoto"><img alt="相片說明" src="./img/APEX/img003.jpg" class="img-responsive"><span>2021.1.1 Sunrise</span></a>
+                      <a href="./img/APEX/img003.jpg" data-rel="prettyPhoto"><img src="./img/APEX/img003.jpg" class="img-responsive"><span>2021.1.1 Sunrise</span></a>
                   </li>
                   <li class="mix webdesign col-sm-4 mix_all" style="display: block;  opacity: 1;">
-                      <a href="./img/APEX/img004.jpg" data-rel="prettyPhoto"><img alt="相片說明" src="./img/APEX/img004.jpg" class="img-responsive"><span>2020.12.28 Heirlooms</span></a>
+                      <a href="./img/APEX/img004.jpg" data-rel="prettyPhoto"><img src="./img/APEX/img004.jpg" class="img-responsive"><span>2020.12.28 Heirlooms</span></a>
                   </li>
                   <li class="mix printing col-sm-4 mix_all" style="display: block;  opacity: 1;">
-                      <a href="./img/APEX/img002.jpg" data-rel="prettyPhoto"><img id="doubleWidth" alt="相片說明" src="./img/APEX/img002.jpg" class="img-responsive"><span>2021.9.26 向海裡去</span></a>
+                      <a href="./img/APEX/img002.jpg" data-rel="prettyPhoto"><img id="doubleWidth" src="./img/APEX/img002.jpg" class="img-responsive"><span>2021.9.26 向海裡去</span></a>
                   </li>
               </ul>
           </div>
@@ -110,7 +110,7 @@
       <!-- Footer -->
       <div class="row">
           <div class="col-lg-12">
-              <p class="text-center small tm-copyright-text mb-0">Last edit 2022/6/29 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+              <p class="text-center small tm-copyright-text mb-0">Last edit 2022/7/8 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
           </div>
       </div>
   </div>
