--- a/DC.html
+++ b/DC.html
@@ -111,31 +111,31 @@
                 -->
                 <ul id="Grid" class="row">
                     <li class="mix webdesign col-sm-4 mix_all" style="display: block;  opacity: 1;">
-                        <a href="./img/DC/img001.png" data-rel="prettyPhoto"><img alt="相片說明" src="./img/DC/img001.png" class="img-responsive"><span>2021.12.21 蝴蝶結貝斯袋</span></a>
+                        <a href="./img/DC/img001.png" data-rel="prettyPhoto"><img src="./img/DC/img001.png" class="img-responsive"><span>2021.12.21 蝴蝶結貝斯袋</span></a>
                     </li>
                     <li class="mix printing col-sm-4 mix_all" style="display: block;  opacity: 1;">
-                        <a href="./img/DC/img007.jpg" data-rel="prettyPhoto"><img alt="相片說明" src="././img/DC/img007.jpg" class="img-responsive"><span>2021.11.11 光棍節</span></a>
+                        <a href="./img/DC/img007.jpg" data-rel="prettyPhoto"><img src="././img/DC/img007.jpg" class="img-responsive"><span>2021.11.11 光棍節</span></a>
                     </li>
                     <li class="mix development col-sm-4 mix_all" style="display: block;  opacity: 1;">
-                        <a href="./img/DC/img008.jpg" data-rel="prettyPhoto"><img alt="相片說明" src="./img/DC/img008.jpg" class="img-responsive"><span>2021.10.17 不可以色色</span></a>
+                        <a href="./img/DC/img008.jpg" data-rel="prettyPhoto"><img src="./img/DC/img008.jpg" class="img-responsive"><span>2021.10.17 不可以色色</span></a>
                     </li>
                     <li class="mix webdesign col-sm-4 mix_all" style="display: block;  opacity: 1;">
-                        <a href="./img/DC/img002.jpg" data-rel="prettyPhoto"><img alt="相片說明" src="./img/DC/img002.jpg" class="img-responsive"><span>2021.6.5 學士服阿姆努伊</span></a>
+                        <a href="./img/DC/img002.jpg" data-rel="prettyPhoto"><img src="./img/DC/img002.jpg" class="img-responsive"><span>2021.6.5 學士服阿姆努伊</span></a>
                     </li>
                     <li class="mix development col-sm-4 mix_all" style="display: block;  opacity: 1;">
-                        <a href="./img/DC/img003.png" data-rel="prettyPhoto"><img alt="相片說明" src="./img/DC/img003.png" class="img-responsive"><span>2021.5.25 居家工作好夥伴</span></a>
+                        <a href="./img/DC/img003.png" data-rel="prettyPhoto"><img src="./img/DC/img003.png" class="img-responsive"><span>2021.5.25 居家工作好夥伴</span></a>
                     </li>
                     <li class="mix printing col-sm-4 mix_all" style="display: block;  opacity: 1;">
-                        <a href="./img/DC/img004.jpg" data-rel="prettyPhoto"><img alt="相片說明" src="./img/DC/img004.jpg" class="img-responsive"><span>2021.4.27 帶著阿卡努伊看電影</span></a>
+                        <a href="./img/DC/img004.jpg" data-rel="prettyPhoto"><img src="./img/DC/img004.jpg" class="img-responsive"><span>2021.4.27 帶著阿卡努伊看電影</span></a>
                     </li>
                     <li class="mix webdesign col-sm-4 mix_all" style="display: block;  opacity: 1;">
-                        <a href="./img/DC/img005.jpg" data-rel="prettyPhoto"><img alt="相片說明" src="./img/DC/img005.jpg" class="img-responsive"><span>2021.3.25 場次無料小卡</span></a>
+                        <a href="./img/DC/img005.jpg" data-rel="prettyPhoto"><img src="./img/DC/img005.jpg" class="img-responsive"><span>2021.3.25 場次無料小卡</span></a>
                     </li>
                     <li class="mix development col-sm-4 mix_all" style="display: block;  opacity: 1;">
-                        <a href="./img/DC/img009.gif" data-rel="prettyPhoto"><img alt="相片說明" src="./img/DC/img009.gif" class="img-responsive"><span>2022.1.14 ㄉㄨㄞ井</span></a>
+                        <a href="./img/DC/img009.gif" data-rel="prettyPhoto"><img src="./img/DC/img009.gif" class="img-responsive"><span>2022.1.14 ㄉㄨㄞ井</span></a>
                     </li>
                     <li class="mix printing col-sm-4 mix_all" style="display: block;  opacity: 1;">
-                        <a href="./img/DC/img010.gif" data-rel="prettyPhoto"><img alt="相片說明" src="./img/DC/img010.gif" class="img-responsive"><span>2022.1.14 ㄉㄨㄞ零</span></a>
+                        <a href="./img/DC/img010.gif" data-rel="prettyPhoto"><img src="./img/DC/img010.gif" class="img-responsive"><span>2022.1.14 ㄉㄨㄞ零</span></a>
                     </li>
                 </ul>
             </div>
@@ -150,7 +150,7 @@
         <!-- Footer -->
         <div class="row">
             <div class="col-lg-12">
-                <p class="text-center small tm-copyright-text mb-0">Last edit 2022/6/29 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+                <p class="text-center small tm-copyright-text mb-0">Last edit 2022/7/8 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
             </div>
         </div>
     </div>
