--- a/DC.html
+++ b/DC.html
@@ -56,6 +56,7 @@
                         <h2 class="mb-4 tm-text-color-primary"><strong>DC｜名偵探柯南</strong></h2>
                         <br />
                         <h5 class="mb-4 tm-text-color-primary">▍ AKAM 赤安</h5>
+                        <p><a href="https://bit.ly/3dGLQDu">【短文】あしたの夜（CWT61認親文公開）</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2022.8.13</font></p>
                         <p><a href="https://bit.ly/3t8BYaU">【短文】白色情人節賀文2022</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2022.3.14</font></p>
                         <p><a href="http://bit.ly/39R1KqC">【短文】初雪（CWT56無料公開）</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.12.12</font></p>
                         <p><a href="https://bit.ly/3ldV89f">【極短】七夕</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.8.25</font></p>
@@ -84,13 +85,13 @@
 
 
                         <!-- 新增目錄備用
-                                                 <p><a href="#">【赤安極短】依然相伴</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.10.17</font></p>
-                        -->
-                        
+                             <p><a href="#">【赤安極短】依然相伴</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2019.10.17</font></p>
+    -->
+
                         <br /><br />
                         <a href="./index.html" class="btn btn-primary tm-md-align-center">Back to Home</a>
                         <p>&nbsp;</p>
-                        
+
                     </div>
                 </div>
             </div>
@@ -150,7 +151,7 @@
         <!-- Footer -->
         <div class="row">
             <div class="col-lg-12">
-                <p class="text-center small tm-copyright-text mb-0">Last edit 2022/7/8 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+                <p class="text-center small tm-copyright-text mb-0">Last edit 2022/8/20 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
             </div>
         </div>
     </div>
