--- a/article/juju/gogego003.html
+++ b/article/juju/gogego003.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -47,6 +47,8 @@
                          <p><font size="2" color="#999999"><strong>原因大概是某人隨便找了毫無邏輯可言的理由擠了進去。</strong></font></p>
                          <p><font size="2" color="#999999"><strong>和<a href="https://bit.ly/3AHfccU">上一篇</a>的時間線相同。</strong></font></p>
                          <p><font size="2" color="#999999"><strong>同居二十題題目來源：<a href="https://nijipu510.weebly.com/123042151623621203898812305.html">nijipu510.weebly.com</a></strong></font></p>
+                         <p><font size="2" color="#999999"><strong>校稿感謝 – <a href="https://www.plurk.com/damia020">柳松菇</a></strong></font></p>
+                         <p><font size="2" color="#999999"><strong>表紙素材 – <a href="https://www.pixiv.net/users/26036146">kayu*</a></strong></font></p>
 
                          <img src="./img/CWT57cover.png" alt="Image" class="img-fluid">
 
@@ -110,12 +112,6 @@
                          <br /><br />
                          <p>Fin.</p>
                          <p>2021.3.27.&nbsp;&nbsp;墨兒&infin;</p>
-                         
-                         
-                         <br /><p>/</p><br />
-                         <p><font size="2" color="#999999"><strong>校稿感謝 – 柳松菇</strong></font></p>
-                         <p><font size="2" color="#999999"><strong>表紙素材 – <a href="https://www.pixiv.net/users/26036146">kayu*</a></strong></font></p>
-
 
                          <br /><p>－</p><br />
 
