--- a/JUJU.html
+++ b/JUJU.html
@@ -54,7 +54,7 @@
                     <div class="tm-md-flex-center">
                         <h2 class="mb-4 tm-text-color-primary"><strong>Jujutsu Kaisen｜咒術迴戰</strong></h2>
                         <br />
-                        <h5 class="mb-4 tm-text-color-primary">▍ 五夏五</h5>
+                        <h5 class="mb-4 tm-text-color-primary">▍ 五夏</h5>
                         <p><a href="https://bit.ly/3Ri3oVp">【短文】高專五夏（CWT57交換/認親文公開）</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2021.3.27</font></p>
                         <p><a href="https://bit.ly/3wNrIWY">【極短】無題（0卷腦補）</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2021.1.5</font></p>
                         <p><a href="https://bit.ly/3AHfccU">【短文】高專五夏（CWT56交換/認親文公開）</a>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2">2020.12.12</font></p>
