--- a/article/juju/gogego002.html
+++ b/article/juju/gogego002.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -42,7 +42,6 @@
                          <br />
                          <p>五夏短篇（五條悟 x 夏油傑）</p>
                          <p><font size="2" color="#999999"><strong>此篇為CWT56發送的交換/認親文。</strong></font></p>
-                         <p><font size="2" color="#999999"><strong>是以五夏為出發點去構思與寫作的，但文章內容也可視為五夏五無差。</strong></font></p>
                          <p><font size="2" color="#999999"><strong>神祕時間線，大概是高專時期某人擠進另一個人的宿舍房間，而展開的同居生活。</strong></font></p>
                          <p><font size="2" color="#999999"><strong>估計有80%的OOC與20%的私設。</strong></font></p>
                          <p><font size="2" color="#999999"><strong>逼自己寫一點甜的，不然我要抑鬱而卒了。</strong></font></p>
