--- a/DC.html
+++ b/DC.html
@@ -111,6 +111,18 @@
                 </div>
                 -->
                 <ul id="Grid" class="row">
+                    <li class="mix development col-sm-4 mix_all" style="display: block;  opacity: 1;">
+                        <a href="./img/DC/img012.GIF" data-rel="prettyPhoto"><img src="./img/DC/img012.GIF" class="img-responsive"><span>2022.9.8 會讓我出軌的女生</span></a>
+                    </li>
+                    <li class="mix development col-sm-4 mix_all" style="display: block;  opacity: 1;">
+                        <a href="./img/DC/img011.JPG" data-rel="prettyPhoto"><img src="./img/DC/img011.JPG" class="img-responsive"><span>2022.8.4 七夕怪圖</span></a>
+                    </li>
+                    <li class="mix development col-sm-4 mix_all" style="display: block;  opacity: 1;">
+                        <a href="./img/DC/img009.gif" data-rel="prettyPhoto"><img src="./img/DC/img009.gif" class="img-responsive"><span>2022.1.14 ㄉㄨㄞ井</span></a>
+                    </li>
+                    <li class="mix printing col-sm-4 mix_all" style="display: block;  opacity: 1;">
+                        <a href="./img/DC/img010.gif" data-rel="prettyPhoto"><img src="./img/DC/img010.gif" class="img-responsive"><span>2022.1.14 ㄉㄨㄞ零</span></a>
+                    </li>
                     <li class="mix webdesign col-sm-4 mix_all" style="display: block;  opacity: 1;">
                         <a href="./img/DC/img001.png" data-rel="prettyPhoto"><img src="./img/DC/img001.png" class="img-responsive"><span>2021.12.21 蝴蝶結貝斯袋</span></a>
                     </li>
@@ -132,12 +144,7 @@
                     <li class="mix webdesign col-sm-4 mix_all" style="display: block;  opacity: 1;">
                         <a href="./img/DC/img005.jpg" data-rel="prettyPhoto"><img src="./img/DC/img005.jpg" class="img-responsive"><span>2021.3.25 場次無料小卡</span></a>
                     </li>
-                    <li class="mix development col-sm-4 mix_all" style="display: block;  opacity: 1;">
-                        <a href="./img/DC/img009.gif" data-rel="prettyPhoto"><img src="./img/DC/img009.gif" class="img-responsive"><span>2022.1.14 ㄉㄨㄞ井</span></a>
-                    </li>
-                    <li class="mix printing col-sm-4 mix_all" style="display: block;  opacity: 1;">
-                        <a href="./img/DC/img010.gif" data-rel="prettyPhoto"><img src="./img/DC/img010.gif" class="img-responsive"><span>2022.1.14 ㄉㄨㄞ零</span></a>
-                    </li>
+
                 </ul>
             </div>
         </section>
@@ -151,7 +158,7 @@
         <!-- Footer -->
         <div class="row">
             <div class="col-lg-12">
-                <p class="text-center small tm-copyright-text mb-0">Last edit 2022/8/21 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+                <p class="text-center small tm-copyright-text mb-0">Last edit 2022/9/8 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
             </div>
         </div>
     </div>
