--- a/article/dc/akam018_poster.html
+++ b/article/dc/akam018_poster.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -30,7 +30,8 @@
   <div >
       <div>
           <div class="thing">
-              <img src="https://imgur.com/qZZ59Jv.png" alt="">
+              <a href="./akam018-r18.html"><img src="https://imgur.com/qZZ59Jv.png" alt=""> </a>
+              
           </div>
           <!--
           <p style="color: #404040; font-size:10px">CSS Technical Support: Andrew Walpole (@walpolea)</p>
@@ -53,6 +54,12 @@
 
     $('.tm-current-year').text(new Date().getFullYear());  // Update year in copyright
   });
+
+</script>
+<script>
+    function posterClicked() {
+        window.alert("to becontinued...");
+    }
 
 </script>
 
