--- a/DC.html
+++ b/DC.html
@@ -112,6 +112,9 @@
                 -->
                 <ul id="Grid" class="row">
                     <li class="mix development col-sm-4 mix_all" style="display: block;  opacity: 1;">
+                        <a href="./img/DC/img014.jpg" data-rel="prettyPhoto"><img src="./img/DC/img014.jpg" class="img-responsive"><span>2022.10.31 沖矢先生的萬聖燉糖果</span></a>
+                    </li>
+                    <li class="mix development col-sm-4 mix_all" style="display: block;  opacity: 1;">
                         <a href="./img/DC/img013.gif" data-rel="prettyPhoto"><img src="./img/DC/img013.gif" class="img-responsive"><span>2022.9.11 中秋滿月赤安</span></a>
                     </li>
                     <li class="mix development col-sm-4 mix_all" style="display: block;  opacity: 1;">
@@ -161,7 +164,7 @@
         <!-- Footer -->
         <div class="row">
             <div class="col-lg-12">
-                <p class="text-center small tm-copyright-text mb-0">Last edit 2022/9/12 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+                <p class="text-center small tm-copyright-text mb-0">Last edit 2022/11/19 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
             </div>
         </div>
     </div>
