--- a/article/dc/akam018-r18.html
+++ b/article/dc/akam018-r18.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -45,19 +45,20 @@
        </div>
   </div>
 
-  <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
-    <div class="tm-flex-center p-5">
-        <p><strong>Comming soon......</strong></p>
-        <p style="font-size: 10px"><br /><br /><br /><br />還在......努力......寫......（小聲）</p>
-    </div>
-  </div>
+   <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+       <div class="tm-flex-center p-5">
+           <a href="./akam018_A.html" class="btn btn-primary tm-md-align-center"><font size="4">我「已年滿」十八歲</font><br/>（清水版認親文原文）</a>
+           &nbsp;&nbsp;&nbsp;&nbsp;
+           <a href="./akam018_B.html" class="btn btn-primary tm-md-align-center"><font size="4">我「未滿」十八歲</font><br />（認親文原文與後續）</a>
+       </div>
+   </div>
 
 </section>
 
          <!-- Footer -->
          <div class="row">
              <div class="col-lg-12">
-                 <p class="text-center small tm-copyright-text mb-0">Last edit 2022/10/15 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+                 <p class="text-center small tm-copyright-text mb-0">Last edit 2022/12/15 | Built by 墨兒 <br />Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
              </div>
          </div>
 </div>
