--- a/article/dc/akam018-r18.html
+++ b/article/dc/akam018-r18.html
@@ -47,9 +47,9 @@
 
    <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
        <div class="tm-flex-center p-5">
-           <a href="./akam018_A.html" class="btn btn-primary tm-md-align-center"><font size="4">我「已年滿」十八歲</font><br/>（清水版認親文原文）</a>
+           <a href="./akam018_B.html" class="btn btn-primary tm-md-align-center"><font size="4">我「未滿」十八歲</font><br/>（清水版認親文原文）</a>
            &nbsp;&nbsp;&nbsp;&nbsp;
-           <a href="./akam018_B.html" class="btn btn-primary tm-md-align-center"><font size="4">我「未滿」十八歲</font><br />（認親文原文與後續）</a>
+           <a href="./akam018_A.html" class="btn btn-primary tm-md-align-center"><font size="4">我「已年滿」十八歲</font><br />（認親文原文與後續）</a>
        </div>
    </div>
 
